--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="intro">
             <div class="intro-text">
                 <h2>About Me</h2>
-                <p>Hello, I'm Mohanish Sargam, a DevOps Engineer with experience in automating processes, managing CI/CD pipelines, and optimizing cloud infrastructure. I have a deep passion for automating workflows, building efficient systems, and ensuring smooth software delivery processes.</p>
+                <p>Hello, I'am Mohanish Sargam, a DevOps Engineer with experience in automating processes, managing CI/CD pipelines, and optimizing cloud infrastructure. I have a deep passion for automating workflows, building efficient systems, and ensuring smooth software delivery processes.</p>
             </div>
             <img src="mohanish.jpeg" alt="Mohanish Sargam" class="profile-picture">
         </div>
